--- a/MyApplication4/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication4/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,21 @@
         android:layout_centerHorizontal="true">
 
     </GridLayout>
+    <TextView
+        android:id="@+id/points"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/spinStop"
+        android:layout_centerHorizontal="true"
+        android:text="Points: 0"
+        android:textSize="20sp"
+        android:textColor="#1122EE"/>
     <Button
         android:id="@+id/spinStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/barLabel"
         android:layout_centerHorizontal="true"
-        android:text="SPIN"
         android:onClick="buttonPressed">
     </Button>
     <TextView
@@ -32,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/seeker"
         android:layout_centerHorizontal="true"
+        android:textColor="#CC11"
         />
     <SeekBar
         android:id="@+id/seeker"
