--- a/MyApplication4/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication4/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,12 @@
 
     <GridLayout
         android:id="@+id/grid"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:rowCount="1"
         android:columnCount="3"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp">
 
     </GridLayout>
     <TextView
@@ -30,7 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/barLabel"
         android:layout_centerHorizontal="true"
-        android:onClick="buttonPressed">
+        android:onClick="buttonPressed"
+        android:text="SPIN">
     </Button>
     <TextView
         android:id="@+id/barLabel"
