--- a/MyApplication4/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication4/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.myapplication.MainActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Help Me"
+        android:onClick="extraButtonPressed"
+        android:textColor="#AA1B12" />
+
     <GridLayout
         android:id="@+id/grid"
         android:layout_width="wrap_content"
@@ -13,7 +20,7 @@
         android:rowCount="1"
         android:columnCount="3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp">
+        android:layout_marginTop="100dp">
 
     </GridLayout>
     <TextView
